load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["java_test_suite_shared_constants.bzl"])

bzl_library(
    name = "artifact",
    srcs = ["artifact.bzl"],
    visibility = ["//java:__subpackages__"],
    deps = ["@rules_jvm_external//:implementation"],
)

bzl_library(
    name = "checkstyle",
    srcs = ["checkstyle.bzl"],
    visibility = ["//java:__subpackages__"],
    deps = [
        ":checkstyle_config",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "create_jvm_test_suite",
    srcs = ["create_jvm_test_suite.bzl"],
    visibility = ["//java:__subpackages__"],
    deps = [":package"],
)

bzl_library(
    name = "java_test_suite",
    srcs = ["java_test_suite.bzl"],
    visibility = ["//java:__subpackages__"],
    deps = [
        ":create_jvm_test_suite",
        ":java_test_suite_shared_constants",
        ":library",
    ],
)

bzl_library(
    name = "junit5",
    srcs = ["junit5.bzl"],
    visibility = ["//java:__subpackages__"],
    deps = [
        ":library",
        ":package",
        "@rules_jvm_external//:implementation",
    ],
)

bzl_library(
    name = "library",
    srcs = ["library.bzl"],
    visibility = ["//java:__subpackages__"],
    deps = [
        ":checkstyle",
        ":pmd",
        ":spotbugs",
        "@apple_rules_lint//lint:implementation",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
        "@rules_jvm_external//:implementation",
    ],
)

bzl_library(
    name = "pmd",
    srcs = ["pmd.bzl"],
    visibility = ["//java:__subpackages__"],
    deps = [":pmd_ruleset"],
)

bzl_library(
    name = "spotbugs",
    srcs = ["spotbugs.bzl"],
    visibility = ["//java:__subpackages__"],
    deps = [":spotbugs_config"],
)

bzl_library(
    name = "zip_repository",
    srcs = ["zip_repository.bzl"],
    visibility = ["//:__subpackages__"],
    deps = ["@bazel_tools//tools/build_defs/repo:utils.bzl"],
)

bzl_library(
    name = "non-module-deps",
    srcs = ["non-module-deps.bzl"],
    visibility = ["//java:__subpackages__"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "checkstyle_config",
    srcs = ["checkstyle_config.bzl"],
    visibility = ["//java:__subpackages__"],
)

bzl_library(
    name = "java_test_suite_shared_constants",
    srcs = ["java_test_suite_shared_constants.bzl"],
    visibility = ["//java:__subpackages__"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    visibility = ["//java:__subpackages__"],
)

bzl_library(
    name = "pmd_ruleset",
    srcs = ["pmd_ruleset.bzl"],
    visibility = ["//java:__subpackages__"],
)

bzl_library(
    name = "spotbugs_config",
    srcs = ["spotbugs_config.bzl"],
    visibility = ["//java:__subpackages__"],
)
