load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "git",
    srcs = ["gitignore.go"],
    importpath = "github.com/bazel-contrib/rules_jvm/gazelle/common/git",
    visibility = ["//visibility:public"],
    deps = [
        "//gazelle/common",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_go_git_go_git_v5//plumbing/format/gitignore",
    ],
)

go_test(
    name = "git_test",
    srcs = ["gitignore_test.go"],
    embed = [":git"],
    deps = ["@bazel_gazelle//config:go_default_library"],
)
