load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "codegen_lib",
    srcs = ["codegen.go"],
    importpath = "github.com/bazel-contrib/rules_jvm/java/gazelle/javaconfig/codegen",
    visibility = ["//visibility:private"],
    deps = ["@com_github_bazelbuild_buildtools//build:go_default_library"],
)

go_binary(
    name = "codegen",
    embed = [":codegen_lib"],
    visibility = ["//visibility:public"],
)
