load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:exclude testdata

go_library(
    name = "java",
    srcs = [
        "java.go",
        "package.go",
    ],
    importpath = "github.com/bazel-contrib/rules_jvm/java/gazelle/private/java",
    visibility = ["//java/gazelle:__subpackages__"],
    deps = [
        "//java/gazelle/private/sorted_set",
        "//java/gazelle/private/types",
    ],
)

go_test(
    name = "java_test",
    size = "small",
    srcs = ["java_test.go"],
    data = glob(["testdata/**"]),
    embed = [":java"],
)
