load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:exclude testdata

go_library(
    name = "java",
    srcs = [
        "java.go",
        "package.go",
        "quick_scan.go",
    ],
    importpath = "github.com/bazel-contrib/rules_jvm/java/gazelle/private/java",
    # Allow visibility for plugins like Kotlin that don't live in this repo
    visibility = ["//visibility:public"],
    deps = [
        "//java/gazelle/private/sorted_multiset",
        "//java/gazelle/private/sorted_set",
        "//java/gazelle/private/types",
    ],
)

go_test(
    name = "java_test",
    size = "small",
    srcs = [
        "java_test.go",
        "quick_scan_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":java"],
    deps = [
        "//java/gazelle/private/types",
        "@com_github_stretchr_testify//require",
    ],
)
