load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "javaparser",
    srcs = ["javaparser.go"],
    importpath = "github.com/bazel-contrib/rules_jvm/java/gazelle/private/javaparser",
    visibility = ["//java/gazelle:__subpackages__"],
    deps = [
        "//java/gazelle/private/java",
        "//java/gazelle/private/javaparser/proto/gazelle/java/javaparser/v0:javaparser",
        "//java/gazelle/private/servermanager",
        "//java/gazelle/private/sorted_set",
        "//java/gazelle/private/types",
        "@com_github_rs_zerolog//:zerolog",
        "@org_golang_google_grpc//status",
    ],
)
