load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "maven",
    srcs = [
        "config.go",
        "coordinate.go",
        "resolver.go",
    ],
    importpath = "github.com/bazel-contrib/rules_jvm/java/gazelle/private/maven",
    visibility = ["//java/gazelle:__subpackages__"],
    deps = [
        "//java/gazelle/private/bazel",
        "//java/gazelle/private/maven/multiset",
        "@bazel_gazelle//label:go_default_library",
        "@com_github_rs_zerolog//:zerolog",
    ],
)

go_test(
    name = "maven_test",
    size = "small",
    srcs = [
        "config_test.go",
        "coordinate_test.go",
        "resolver_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":maven"],
    deps = [
        "@bazel_gazelle//label:go_default_library",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_stretchr_testify//require",
    ],
)
