load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:exclude testdata

go_library(
    name = "proto",
    srcs = ["package.go"],
    importpath = "github.com/bazel-contrib/rules_jvm/java/gazelle/private/proto",
    visibility = ["//java/gazelle:__subpackages__"],
)

go_test(
    name = "proto_test",
    size = "small",
    srcs = ["package_test.go"],
    data = glob(["testdata/**"]),
    embed = [":proto"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
